--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "id": "mosque_screen",
-  "name": "MosqueScreen",
-  "short_name": "MosqueScreen",
+  "name": "Windsor Mosque",
+  "short_name": "Windsor Mosque",
   "icons": [
     {
       "src": "/android-chrome-192x192.png",
